--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -59,6 +59,15 @@
       width: 80%;
     }
   }
+  /* Solves issue with the div breaking out of its container on window resize */
+  .grid__col--3.theme__colors {
+    min-width: 30px;
+  }
+
+  /* Solves issue with the div breaking out of its container on window resize */
+  .grid__col--12 {
+    flex-wrap: wrap;
+  }
 
   .grid__col--4 {
     width: 35%;
